<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FoodOriginWhite"
    android:backgroundTint="@color/FoodOriginWhite">

    <!--<ImageView
        android:id="@+id/tuto_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tuto_image" />-->

    <TextView
        android:id="@+id/textEmptyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_empty_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/listView"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/buttonDeleteHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_delete_history"
        android:background="@color/FoodOriginOrange"
        android:textColor="@color/FoodOriginWhite"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:clipToPadding="false"
        android:divider="@color/FoodOriginWhite"
        android:dividerHeight="10dp"
        android:listSelector="@color/transparent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>