...
    <string name="no_match_toast">Pas de correspondances</string>
    <string name="api_problem">Problème lors de la collecte des données</string>
    <string name="recognition_fail_toast">Pas d\'estampille reconnue</string>
    <string name="maps_api_key">AIzaSyCYasmitSEl9kMoj8Jsq0x6OOgPJTUvmKE</string>
    <string name="no_gps_marker_name">Pyramide du Louvre</string>
    <string name="no_gps_found">Aucun signal GPS</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="dialog_delete_message">Désirez-vous supprimer définitivement votre historique ?</string>
    <string name="info_title">Informations lieu de fabrication</string>
    <string name="know_more_title">Détails sur le lieu de fabrication</string>
    <string name="adress"><![CDATA[<b>Adresse :</b>]]> %1$s</string>
    <string name="name"><![CDATA[<b>Industriel :</b>]]> %1$s</string>
    <string name="wip">WORK IN PROGRESS</string>
    <string name="know_more">En savoir plus</string>
...
