...
            android:hint="@string/tf_write_estampille"
            android:textColorHighlight="#80006BA3"
            android:textColorLink="@color/FoodOriginOrange" />
    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/button_pckg_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/FoodOriginOrange"
        android:text="@string/button_search_estampille"
        android:textColor="#FFFFFF"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
...
