<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_look_around"
        android:focusable="true"
        android:gravity="left"
        android:visible="false"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:background="?attr/selectableItemBackground"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history"
        android:focusable="true"
        android:gravity="left"
        android:icon="@drawable/ic_baseline_history_24"
        android:background="?attr/selectableItemBackground"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_write_code"
        android:focusable="true"
        android:gravity="left"
        android:icon="@drawable/ic_baseline_search_24"
        android:background="?attr/selectableItemBackground"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:focusable="true"
        android:gravity="left"
        android:icon="@drawable/ic_baseline_home_24"
        android:background="?attr/selectableItemBackground"
        android:title=""
        app:showAsAction="always" />
</menu>